--- a/sites/IISAS-FedCloud-cloud.yaml
+++ b/sites/IISAS-FedCloud-cloud.yaml
@@ -19,4 +19,7 @@ vos:
 - auth:
     project_id: af0a1e8165b94365903088e00e34b063
   name: cryoem.instruct-eric.eu
-  
+- auth:
+    project_id: 982ce52d45fe4e33a1c952ab9484c711
+  name: cloud.egi.eu
+
