--- a/sites/IISAS-FedCloud-cloud.yaml
+++ b/sites/IISAS-FedCloud-cloud.yaml
@@ -31,4 +31,7 @@ vos:
 - auth:
     project_id: 6c4aff79522448ac8191e70dcf4a672a
   name: vo.nextgeoss.eu
+- auth:
+    project_id: 74f63e431be04330862fd6d51434dcea
+  name: biomed
   
