--- a/sites/IISAS-FedCloud-cloud.yaml
+++ b/sites/IISAS-FedCloud-cloud.yaml
@@ -34,4 +34,7 @@ vos:
 - auth:
     project_id: 74f63e431be04330862fd6d51434dcea
   name: biomed
+- auth:
+    project_id: ba233ccdb3a84ecb961ad340f4b34369
+  name: training.egi.eu
   
