--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,9 @@ jobs:
         CHECKIN_REFRESH_TOKEN: ${{ secrets.CHECKIN_REFRESH_TOKEN }}
       run: |
         cd deploy
-        EGI_SITE=$(python -c  "import yaml; print(yaml.safe_load(open('clouds.yaml').read())['clouds']['backend']['site'])")
-        echo "EGI_SITE=$EGI_SITE" >> $GITHUB_ENV
-        PROJECT_ID=$(python -c  "import yaml; print(yaml.safe_load(open('clouds.yaml').read())['clouds']['backend']['auth']['project_id'])")
+        EGI_SITE="$(python -c  "import yaml; print(yaml.safe_load(open('clouds.yaml').read())['clouds']['backend']['site'])")"
+        echo "EGI_SITE=$EGI_SITE" >> "$GITHUB_ENV"
+        PROJECT_ID="$(python -c  "import yaml; print(yaml.safe_load(open('clouds.yaml').read())['clouds']['backend']['auth']['project_id'])")"
         eval "$(egicli endpoint token --site $EGI_SITE --project-id $PROJECT_ID)"
         echo "::add-mask::$OS_TOKEN"
         sed -i -e "s/secret/$OS_TOKEN/" clouds.yaml
