Bring ops to every site

--- a/sites/100IT.yaml
+++ b/sites/100IT.yaml
@@ -5,5 +5,8 @@ vos:
     project_id: 0785b78c70ce4e9f91bf851a4fd156b2
   name: dteam
 - auth:
+    project_id: 24426f375b494df5b47f1efebc272e5c
+  name: ops
+- auth:
     project_id: 7cfb9087632a4df5b738fbd0b795f2ad
   name: fedcloud.egi.eu
