--- a/sites/CLOUDIFIN.yaml
+++ b/sites/CLOUDIFIN.yaml
@@ -10,3 +10,6 @@ vos:
 - auth:
     project_id: 245cdfdce0c84227b9b60d247618f635
   name: fedcloud.egi.eu
+- auth:
+    project_id: 21440821c8904e5b8ce5ec101a1ca879
+  name: ops
