--- a/sites/CYFRONET-CLOUD.yaml
+++ b/sites/CYFRONET-CLOUD.yaml
@@ -8,5 +8,8 @@ vos:
     project_id: 1295728b1ce747fb96c043c6e254ad6f
   name: fedcloud.egi.eu
 - auth:
+    project_id: c030e7317150482d920717888e82ce5f
+  name: ops
+- auth:
     project_id: 7635176e4f9b4cb4b3f4192a5bf901a3
   name: vo.access.egi.eu
