--- a/sites/fedcloud.srce.hr.yaml
+++ b/sites/fedcloud.srce.hr.yaml
@@ -7,3 +7,6 @@ vos:
 - auth:
     project_id: 662f67f51f4c451987e62b17820a2bc5
   name: fedcloud.egi.eu
+- auth:
+    project_id: 949f4fe468164de9a8afdf03e70a6fc0
+  name: ops
