--- a/sites/TR-FC1-ULAKBIM.yaml
+++ b/sites/TR-FC1-ULAKBIM.yaml
@@ -1,33 +1,34 @@
-endpoint: https://bulut.truba.gov.tr:5000/v3
+---
 gocdb: TR-FC1-ULAKBIM
+endpoint: https://bulut.truba.gov.tr:5000/v3
 vos:
-- auth:
+- name: dteam
+  auth:
     project_id: 208e4da6c3c249cdab269cb5b645cceb
-  name: dteam
-- auth:
-    project_id: c2ffb5336de9467c8a588038e2c06750
-  name: fedcloud.egi.eu
-- auth:
-    project_id: 2fa316a05d364de9b5a55ac78a45f8bf
-  name: vo.access.egi.eu
-- auth:
-    project_id: 261e58163d204beb8d6ee82cca385771
-  name: enmr.eu
-- auth:
-    project_id: 64abd71f8a1e42b6a3be1d1a172d96b6
-  name: ops
-- auth:
-    project_id: b0159e11cb4b470eba90d113593e90c9
-  name: vo.nbis.se
-- auth:
-    project_id: 0606cbf2743c4bbc8680227247f4d616
-  name: fusion
-- auth:
+- name: eiscat.se
+  auth:
     project_id: 4b607492b48c4d9c9942ca243ae16a58
-  name: eiscat.se
-- auth:
-    project_id: a59bd0a9ed754941962846c4a081d6ca
-  name: vo.enes.org
-- auth:
+- name: enmr.eu
+  auth:
+    project_id: 261e58163d204beb8d6ee82cca385771
+- name: fedcloud.egi.eu
+  auth:
+    project_id: c2ffb5336de9467c8a588038e2c06750
+- name: fusion
+  auth:
+    project_id: 0606cbf2743c4bbc8680227247f4d616
+- name: ops
+  auth:
+    project_id: 64abd71f8a1e42b6a3be1d1a172d96b6
+- name: vo.access.egi.eu
+  auth:
+    project_id: 2fa316a05d364de9b5a55ac78a45f8bf
+- name: vo.agiliacenter.com
+  auth:
     project_id: 4d155cb4af3f46af89c56fd91d9387f0
-  name: vo.agiliacenter.com
+- name: vo.enes.org
+  auth:
+    project_id: a59bd0a9ed754941962846c4a081d6ca
+- name: vo.nbis.se
+  auth:
+    project_id: b0159e11cb4b470eba90d113593e90c9
