--- a/sites/CESGA.yaml
+++ b/sites/CESGA.yaml
@@ -1,57 +1,58 @@
-endpoint: https://fedcloud-osservices.egi.cesga.es:5000/v3
+---
 gocdb: CESGA
+endpoint: https://fedcloud-osservices.egi.cesga.es:5000/v3
 vos:
-- auth:
+- name: benchmark.terradue.com
+  auth:
     project_id: c948a24f5e564668af0e9a106e38a944
-  name: benchmark.terradue.com
-- auth:
-    project_id: 972298c557184a2192ebc861f3184da8
-  name: covid19.eosc-synergy.eu
-- auth:
-    project_id: 57bcb0efcba4467fa225add92fdc194c
-  name: eosc-synergy.eu
-- auth:
-    project_id: 3a8e9d966e644405bf19b536adf7743d
-  name: vo.access.egi.eu
-- auth:
-    project_id: 916506ac136741c28e4326975eef0bff
-  name: vo.emso-eric.eu
-- auth:
-    project_id: c1c9c25774fe418599bced1d45862c60
-  name: vo.envri-fair.eu
-- auth:
-    project_id: b1d2ef2cc2284c57bcde21cf4ab141e3
-  name: vo.nextgeoss.eu
-- auth:
-    project_id: fcaf23d103c1485694e7494a59ee5f09
-  name: vo.notebooks.egi.eu
-- auth:
-    project_id: 707711a8c2154caab35fa9ccdf38434a
-  name: ops
-- auth:
+- name: blazarmonitoring.asi.it
+  auth:
     project_id: 835c2dd1be6f4e319dfce60b34c1b1c3
-  name: blazarmonitoring.asi.it
-- auth:
+- name: covid19.eosc-synergy.eu
+  auth:
+    project_id: 972298c557184a2192ebc861f3184da8
+- name: d4science.org
+  auth:
     project_id: 69522b33d33a4c53a471eb269e069d5b
-  name: d4science.org
-- auth:
+- name: enmr.eu
+  auth:
     project_id: 7f23f4323ff54359964d3afdd1f2a8c7
-  name: enmr.eu
-- auth:
-    project_id: 4a22f140a5fb4678aa1599fbf0b44b2f
-  name: o3as.data.kit.edu
-- auth:
-    project_id: ed8399d460a44bde9c69484ccc6a53b6
-  name: vo.stars4all.eu
-- auth:
+- name: eosc-synergy.eu
+  auth:
+    project_id: 57bcb0efcba4467fa225add92fdc194c
+- name: fusion
+  auth:
     project_id: 11b8dbe34f9f4379bf2339121a1429e0
-  name: fusion
-- auth:
+- name: lagoproject.net
+  auth:
     project_id: 50a0ce2d050048c68bc3094b6682d837
-  name: lagoproject.net
-- auth:
+- name: mswss.ui.savba.sk
+  auth:
     project_id: a91154f2803b4414a4f34039539833fa
-  name: mswss.ui.savba.sk
-- auth:
+- name: o3as.data.kit.edu
+  auth:
+    project_id: 4a22f140a5fb4678aa1599fbf0b44b2f
+- name: ops
+  auth:
+    project_id: 707711a8c2154caab35fa9ccdf38434a
+- name: vo.access.egi.eu
+  auth:
+    project_id: 3a8e9d966e644405bf19b536adf7743d
+- name: vo.clarin.eu
+  auth:
     project_id: f5575c54231747109d6b2466334085bb
-  name: vo.clarin.eu
+- name: vo.emso-eric.eu
+  auth:
+    project_id: 916506ac136741c28e4326975eef0bff
+- name: vo.envri-fair.eu
+  auth:
+    project_id: c1c9c25774fe418599bced1d45862c60
+- name: vo.nextgeoss.eu
+  auth:
+    project_id: b1d2ef2cc2284c57bcde21cf4ab141e3
+- name: vo.notebooks.egi.eu
+  auth:
+    project_id: fcaf23d103c1485694e7494a59ee5f09
+- name: vo.stars4all.eu
+  auth:
+    project_id: ed8399d460a44bde9c69484ccc6a53b6
