--- a/sites/DESY-HH.yaml
+++ b/sites/DESY-HH.yaml
@@ -1,9 +1,10 @@
-endpoint: https://ccmi-api.desy.de:5000/v3
+---
 gocdb: DESY-HH
+endpoint: https://ccmi-api.desy.de:5000/v3
 vos:
-- auth:
+- name: fedcloud.egi.eu
+  auth:
     project_id: 84ef898d6bdc4d01aaabdf1dda2ca791
-  name: fedcloud.egi.eu
-- auth:
+- name: vo.panosc.eu
+  auth:
     project_id: ac06d127fc14463c9bd283f08e731eb2
-  name: vo.panosc.eu
