--- a/sites/IFCA-LCG2.yaml
+++ b/sites/IFCA-LCG2.yaml
@@ -1,66 +1,67 @@
-endpoint: https://api.cloud.ifca.es:5000/v3/
+---
 gocdb: IFCA-LCG2
+endpoint: https://api.cloud.ifca.es:5000/v3/
 vos:
-- auth:
+- name: acc-comp.egi.eu
+  auth:
     project_id: 403847ab342247b89b0ba2ede2c82b39
-  name: acc-comp.egi.eu
-- auth:
+- name: biinsight.eosc-hub.eu
+  auth:
     project_id: d602bda767b4490a82b2f62f9347a0f5
-  name: biinsight.eosc-hub.eu
-- auth:
+- name: covid19.eosc-synergy.eu
+  auth:
     project_id: e14972ead3154810a5941e511afc208c
-  name: covid19.eosc-synergy.eu
-- auth:
+- name: cryoem.instruct-eric.eu
+  auth:
     project_id: c7db08b907ef4f0fae73bdd6587bc79e
-  name: cryoem.instruct-eric.eu
-- auth:
+- name: d4science.org
+  auth:
     project_id: 9170e65775964a3ba6b18d83a2ad1968
-  name: d4science.org
-- auth:
+- name: demo.fedcloud.egi.eu
+  auth:
     project_id: 2a7e2cd4b6dc4e609dd934964c1715c6
-  name: demo.fedcloud.egi.eu
-- auth:
+- name: dteam
+  auth:
     project_id: 5eb8959a799240a98f4f303f5fbd80be
-  name: dteam
-- auth:
+- name: ec-meloa.eu
+  auth:
     project_id: 6b8f8974b27247adb4cc2990b81e6019
-  name: ec-meloa.eu
-- auth:
+- name: enmr.eu
+  auth:
     project_id: b6b1c395b7da4e8aa1d0895bd695b0ba
-  name: enmr.eu
-- auth:
+- name: eosc-synergy.eu
+  auth:
     project_id: 3b9754ad8c6046b4aec43ec21abe7d8c
-  name: eosc-synergy.eu
-- auth:
+- name: lagoproject.net
+  auth:
     project_id: 77c86367335f4e9cb1e9ccab72d24f0a
-  name: lagoproject.net
-- auth:
+- name: o3as.data.kit.edu
+  auth:
     project_id: 352db003073549749351fad26cd55074
-  name: o3as.data.kit.edu
-- auth:
+- name: opencoast.eosc-hub.eu
+  auth:
     project_id: 4ebc1727dbed465c8ef72617a9075b4f
-  name: opencoast.eosc-hub.eu
-- auth:
+- name: ops
+  auth:
     project_id: a372c1e2fba040e58fd0cb524a3ccd34
-  name: ops
-- auth:
+- name: seadatanet-pilot.eosc-hub.eu
+  auth:
     project_id: ccb3f2fe96a44c86b564a17dca9a326c
-  name: seadatanet-pilot.eosc-hub.eu
-- auth:
+- name: training.egi.eu
+  auth:
     project_id: f1d0308880134d04964097524eace710
-  name: training.egi.eu
-- auth:
+- name: vo.access.egi.eu
+  auth:
     project_id: 999f045cb1ff4684a15ebb338af69460
-  name: vo.access.egi.eu
-- auth:
+- name: vo.lifewatch.eu
+  auth:
     project_id: 3c8d36c4136946238e82d995fd274d1c
-  name: vo.lifewatch.eu
-- auth:
+- name: vo.nextgeoss.eu
+  auth:
     project_id: 13c11c4073f4456fac7df84c4eb8f85b
-  name: vo.nextgeoss.eu
-- auth:
+- name: vo.openbiomap.lifewatch.eu
+  auth:
     project_id: ac7bc26131d248ecb6add521e648c331
-  name: vo.openbiomap.lifewatch.eu
-- auth:
+- name: worsica.vo.incd.pt
+  auth:
     project_id: 7bb9c2694f9040c68cd72cb994f5ce89
-  name: worsica.vo.incd.pt
