--- a/sites/IISAS-FedCloud-cloud.yaml
+++ b/sites/IISAS-FedCloud-cloud.yaml
@@ -1,40 +1,40 @@
-endpoint: https://cloud.ui.savba.sk:5000/v3/
+---
 gocdb: IISAS-FedCloud
+endpoint: https://cloud.ui.savba.sk:5000/v3/
 vos:
-- auth:
-    project_id: a22bbffb007745b2934bf308b0a4d186
-  name: covid19.eosc-synergy.eu
-- auth:
-    project_id: 51f736d36ce34b9ebdf196cfcabd24ee
-  name: eosc-synergy.eu
-- auth:
-    project_id: 06f5a36f70684fd7b27518625458b69d
-  name: ops
-- auth:
-    project_id: a3684e7440aa42f287cf5e9e85ea4cae
-  name: mswss.ui.savba.sk
-- auth:
-    project_id: 071a2c4b52494bccbc3606d59d0e6951
-  name: mteam.data.kit.edu
-- auth:
-    project_id: af0a1e8165b94365903088e00e34b063
-  name: cryoem.instruct-eric.eu
-- auth:
-    project_id: 982ce52d45fe4e33a1c952ab9484c711
-  name: cloud.egi.eu
-- auth:
-    project_id: 71dc9c3785cc4876bfb1a4bfc681e0f3
-  name: vo.access.egi.eu
-- auth:
+- name: acc-comp.egi.eu
+  auth:
     project_id: 38f5e55946a34ecea1a58971ba60ace6
-  name: acc-comp.egi.eu
-- auth:
-    project_id: 6c4aff79522448ac8191e70dcf4a672a
-  name: vo.nextgeoss.eu
-- auth:
+- name: biomed
+  auth:
     project_id: 74f63e431be04330862fd6d51434dcea
-  name: biomed
-- auth:
+- name: cloud.egi.eu
+  auth:
+    project_id: 982ce52d45fe4e33a1c952ab9484c711
+- name: covid19.eosc-synergy.eu
+  auth:
+    project_id: a22bbffb007745b2934bf308b0a4d186
+- name: cryoem.instruct-eric.eu
+  auth:
+    project_id: af0a1e8165b94365903088e00e34b063
+- name: eosc-synergy.eu
+  auth:
+    project_id: 51f736d36ce34b9ebdf196cfcabd24ee
+- name: mswss.ui.savba.sk
+  auth:
+    project_id: a3684e7440aa42f287cf5e9e85ea4cae
+- name: mteam.data.kit.edu
+  auth:
+    project_id: 071a2c4b52494bccbc3606d59d0e6951
+- name: ops
+  auth:
+    project_id: 06f5a36f70684fd7b27518625458b69d
+- name: training.egi.eu
+  auth:
     project_id: ba233ccdb3a84ecb961ad340f4b34369
-  name: training.egi.eu
-  
+- name: vo.access.egi.eu
+  auth:
+    project_id: 71dc9c3785cc4876bfb1a4bfc681e0f3
+- name: vo.nextgeoss.eu
+  auth:
+    project_id: 6c4aff79522448ac8191e70dcf4a672a
