--- a/sites/SCAI.yaml
+++ b/sites/SCAI.yaml
@@ -1,9 +1,10 @@
-endpoint: https://fc.scai.fraunhofer.de:5000/v3
+---
 gocdb: SCAI
+endpoint: https://fc.scai.fraunhofer.de:5000/v3
 vos:
-- auth:
+- name: fedcloud.egi.eu
+  auth:
     project_id: 162ecb7fe3ee450ca436935f87662858
-  name: fedcloud.egi.eu
-- auth:
+- name: ops
+  auth:
     project_id: 67bbf0ad6c4d4446b0c0c41197108f2c
-  name: ops
