--- a/sites/UNIV-LILLE.yaml
+++ b/sites/UNIV-LILLE.yaml
@@ -1,15 +1,16 @@
-endpoint: https://thor.univ-lille.fr:5000/v3
+---
 gocdb: UNIV-LILLE
+endpoint: https://thor.univ-lille.fr:5000/v3
 vos:
-- auth:
+- name: dteam
+  auth:
     project_id: aa893955520a4a98a04453808d6f1232
-  name: dteam
-- auth:
+- name: fedcloud.egi.eu
+  auth:
     project_id: def49ef0ac58495f90d8aa2463b33b10
-  name: fedcloud.egi.eu
-- auth:
+- name: ops
+  auth:
     project_id: bee15053597542e3bdd4d7c281eef650
-  name: ops
-- auth:
+- name: vo.access.egi.eu
+  auth:
     project_id: e57db5c1e0b24bcbac9904f4ac22dcaa
-  name: vo.access.egi.eu
