--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           curl -L https://github.com/neilpa/yajsv/releases/download/v1.4.0/yajsv.linux.amd64 > yajsv
           chmod +x yajsv
-          yajsv -s schema.json sites/*.yaml
+          ./yajsv -s schema.json sites/*.yaml
 
       # Validate things according to GOC
       - name: Validate GOC info
