--- a/sites/IFCA-LCG2.yaml
+++ b/sites/IFCA-LCG2.yaml
@@ -8,15 +8,15 @@ vos:
 - name: biinsight.eosc-hub.eu
   auth:
     project_id: d602bda767b4490a82b2f62f9347a0f5
+- name: cos4cloud-eosc.eu
+  auth:
+    project_id: c614975f1176494eaf6d6c389e1f3e2c
 - name: covid19.eosc-synergy.eu
   auth:
     project_id: e14972ead3154810a5941e511afc208c
 - name: cryoem.instruct-eric.eu
   auth:
     project_id: c7db08b907ef4f0fae73bdd6587bc79e
-- name: d4science.org
-  auth:
-    project_id: 9170e65775964a3ba6b18d83a2ad1968
 - name: demo.fedcloud.egi.eu
   auth:
     project_id: 2a7e2cd4b6dc4e609dd934964c1715c6
@@ -35,18 +35,21 @@ vos:
 - name: lagoproject.net
   auth:
     project_id: 77c86367335f4e9cb1e9ccab72d24f0a
+- name: minka-sdg.org
+  auth:
+    project_id: 5fa5ffd825a54f2e8ea3490fdd6502fb
 - name: o3as.data.kit.edu
   auth:
     project_id: 352db003073549749351fad26cd55074
 - name: opencoast.eosc-hub.eu
   auth:
     project_id: 4ebc1727dbed465c8ef72617a9075b4f
+- name: openrisknet.org
+  auth:
+    project_id: 6f17d8db2b07472dacf01c453753c3a8
 - name: ops
   auth:
     project_id: a372c1e2fba040e58fd0cb524a3ccd34
-- name: seadatanet-pilot.eosc-hub.eu
-  auth:
-    project_id: ccb3f2fe96a44c86b564a17dca9a326c
 - name: training.egi.eu
   auth:
     project_id: f1d0308880134d04964097524eace710
@@ -56,9 +59,6 @@ vos:
 - name: vo.lifewatch.eu
   auth:
     project_id: 3c8d36c4136946238e82d995fd274d1c
-- name: vo.nextgeoss.eu
-  auth:
-    project_id: 13c11c4073f4456fac7df84c4eb8f85b
 - name: vo.openbiomap.lifewatch.eu
   auth:
     project_id: ac7bc26131d248ecb6add521e648c331
