--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -1,5 +1,6 @@
 vos:
   acc-comp.egi.eu: "urn:mace:egi.eu:group:acc-comp.egi.eu:vm_operator:role=member#aai.egi.eu"
+  aquamonitor.c-scale.eu: "urn:mace:egi.eu:group:aquamonitor.c-scale.eu:role=member#aai.egi.eu "
   belle: "urn:mace:egi.eu:group:belle:vm_operator:role=member#aai.egi.eu"
   benchmark.terradue.com: "urn:mace:egi.eu:group:benchmark.terradue.com:vm_operator:role=member#aai.egi.eu"
   biinsight.eosc-hub.eu: "urn:mace:egi.eu:group:biinsight.eosc-hub.eu:vm_operator:role=member#aai.egi.eu"
@@ -11,6 +12,7 @@ vos:
   cloud.egi.eu: "urn:mace:egi.eu:group:cloud.egi.eu:vm_operator:role=member#aai.egi.eu"
   cms: "urn:mace:egi.eu:group:cms:vm_operator:role=member#aai.egi.eu"
   covid19.eosc-synergy.eu: "urn:mace:egi.eu:group:covid19.eosc-synergy.eu:vm_operator:role=member#aai.egi.eu"
+  cos4cloud-eosc.eu: "urn:mace:egi.eu:group:cos4cloud-eosc.eu:vm_operator:role=member#aai.egi.eu"
   cryoem.instruct-eric.eu: "urn:mace:egi.eu:group:cryoem.instruct-eric.eu:vm_operator:role=member#aai.egi.eu"
   d4science.org: "urn:mace:egi.eu:group:d4science.org:vm_operator:role=member#aai.egi.eu"
   datafurn.eosc-hub.eu: "urn:mace:egi.eu:group:datafurn.eosc-hub.eu:vm_operator:role=member#aai.egi.eu"
@@ -25,17 +27,19 @@ vos:
   fedcloud.egi.eu: "urn:mace:egi.eu:group:fedcloud.egi.eu:vm_operator:role=member#aai.egi.eu"
   fusion: "urn:mace:egi.eu:group:fusion:vm_operator:role=member#aai.egi.eu"
   gosafe.eng.it: "urn:mace:egi.eu:group:gosafe.eng.it:vm_operator:role=member#aai.egi.eu"
+  hisea.c-scale.eu: "urn:mace:egi.eu:group:hisea.c-scale.eu:role=member#aai.egi.eu "
   kampal.eosc-hub.eu: "urn:mace:egi.eu:group:kampal.eosc-hub.eu:vm_operator:role=member#aai.egi.eu"
   lagoproject.net: "urn:mace:egi.eu:group:lagoproject.net:vm_operator:role=member#aai.egi.eu"
   med.semmelweis-univ.hu: "urn:mace:egi.eu:group:med.semmelweis-univ.hu:vm_operator:role=member#aai.egi.eu"
+  minka-sdg.org: "urn:mace:egi.eu:group:minka-sdg.org:vm_operator:role=member#aai.egi.eu"
   mswss.ui.savba.sk: "urn:mace:egi.eu:group:mswss.ui.savba.sk:vm_operator:role=member#aai.egi.eu"
   mteam.data.kit.edu: "urn:mace:egi.eu:group:mteam.data.kit.edu:vm_operator:role=member#aai.egi.eu"
   o3as.data.kit.edu: "urn:mace:egi.eu:group:o3as.data.kit.edu:vm_operator:role=member#aai.egi.eu"
   opencoast.eosc-hub.eu: "urn:mace:egi.eu:group:opencoast.eosc-hub.eu:vm_operator:role=member#aai.egi.eu"
+  openrisknet.org: "urn:mace:egi.eu:group:openrisknet.org:vm_operator:role=member#aai.egi.eu"
   ops: "urn:mace:egi.eu:group:ops:vm_operator:role=member#aai.egi.eu"
   peachnote.com: "urn:mace:egi.eu:group:peachnote.com:vm_operator:role=member#aai.egi.eu"
   saps-vo.i3m.upv.es: "urn:mace:egi.eu:group:saps-vo.i3m.upv.es:vm_operator:role=member#aai.egi.eu"
-  seadatanet-pilot.eosc-hub.eu: "urn:mace:egi.eu:group:seadatanet-pilot.eosc-hub.eu:vm_operator:role=member#aai.egi.eu"
   training.egi.eu: "urn:mace:egi.eu:group:training.egi.eu:vm_operator:role=member#aai.egi.eu"
   umsa.cerit-sc.cz: "urn:mace:egi.eu:group:umsa.cerit-sc.cz:vm_operator:role=member#aai.egi.eu"
   vo.access.egi.eu: "urn:mace:egi.eu:group:vo.access.egi.eu:vm_operator:role=member#aai.egi.eu"
@@ -52,6 +56,7 @@ vos:
   vo.geoss.eu: "urn:mace:egi.eu:group:vo.geoss.eu:vm_operator:role=member#aai.egi.eu"
   vo.indigo-datacloud.eu: "urn:mace:egi.eu:group:vo.indigo-datacloud.eu:vm_operator:role=member#aai.egi.eu"
   vo.lifewatch.eu: "urn:mace:egi.eu:group:vo.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
+  /vo.lifewatch.eu/openbiomap: "urn:mace:egi.eu:group:vo.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
   vo.max-centre.eu: "urn:mace:egi.eu:group:vo.max-centre.eu:vm_operator:role=member#aai.egi.eu"
   vo.nbis.se: "urn:mace:egi.eu:group:vo.nbis.se:vm_operator:role=member#aai.egi.eu"
   vo.nextgeoss.eu: "urn:mace:egi.eu:group:vo.nextgeoss.eu:vm_operator:role=member#aai.egi.eu"
@@ -62,5 +67,6 @@ vos:
   vo.panosc.eu: "urn:mace:egi.eu:group:vo.panosc.eu:role=vm_operator#aai.egi.eu"
   vo.plocan.eu: "urn:mace:egi.eu:group:vo.plocan.eu:vm_operator:role=member#aai.egi.eu"
   vo.policycloud.eu: "urn:mace:egi.eu:group:vo.policycloud.eu:vm_operator:role=member#aai.egi.eu"
+  vo.seadatanet.eu: "urn:mace:egi.eu:group:vo.seadatanet.eu:vm_operator:role=member#aai.egi.eu"
   vo.stars4all.eu: "urn:mace:egi.eu:group:vo.stars4all.eu:vm_operator:role=member#aai.egi.eu"
   worsica.vo.incd.pt: "urn:mace:egi.eu:group:worsica.vo.incd.pt:vm_operator:role=member#aai.egi.eu"
