--- a/sites/INFN-CLOUD-BARI.yaml
+++ b/sites/INFN-CLOUD-BARI.yaml
@@ -3,6 +3,9 @@ gocdb: INFN-CLOUD-BARI
 endpoint: https://cloud.recas.ba.infn.it:5000/v3
 protocol: oidc
 vos:
+- name: aquamonitor.c-scale.eu
+  auth:
+    project_id: f06e8196b73f416c85de7d6db26fad62
 - name: datafurn.eosc-hub.eu
   auth:
     project_id: 9532166205f341308ab1c1d4b811976d
