Move deploy to IISAS

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,21 +22,31 @@ jobs:
       run: |
         curl -L https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 > jq
         chmod +x jq
-        pip install yq git+https://github.com/EGI-Federation/egicli.git
+        pip install yq fedcloudclient
     - name: Get OS_TOKEN
       env:
         CHECKIN_CLIENT_ID: ${{ secrets.CHECKIN_CLIENT_ID }}
         CHECKIN_CLIENT_SECRET: ${{ secrets.CHECKIN_CLIENT_SECRET }}
         CHECKIN_REFRESH_TOKEN: ${{ secrets.CHECKIN_REFRESH_TOKEN }}
+        VO: cloud.egi.eu
       run: |
         PATH="$PWD:$PATH"
         cd deploy
-        EGI_SITE="$(yq -r .clouds.backend.site clouds.yaml)"
+        BACKEND_SITE="$(yq -r .clouds.backend.site clouds.yaml)"
+        EGI_SITE="$(yq -r .clouds.deploy.site clouds.yaml)"
         echo "EGI_SITE=$EGI_SITE" >> "$GITHUB_ENV"
-        PROJECT_ID="$(yq -r .clouds.backend.auth.project_id clouds.yaml)"
-        eval "$(egicli endpoint token --site "$EGI_SITE" --project-id "$PROJECT_ID")"
-        echo "::add-mask::$OS_TOKEN"
-        sed -i -e "s/secret/$OS_TOKEN/" clouds.yaml
+        BACKEND_OS_TOKEN="$(fedcloud openstack token issue --oidc-refresh-token $CHECKIN_REFRESH_TOKEN \
+                                                           --oidc-client-id $CHECKIN_CLIENT_ID \
+                                                           --oidc-client-secret $CHECKIN_CLIENT_SECRET
+                                                           --site $BACKEND_SITE --vo $VO -j | jq ".[0].Result.id")"
+        echo "::add-mask::$BACKEND_OS_TOKEN"
+        sed -i -e "s/backend_secret/$BACKEND_OS_TOKEN/" clouds.yaml
+        DEPLOY_OS_TOKEN="$(fedcloud openstack token issue --oidc-refresh-token $CHECKIN_REFRESH_TOKEN \
+                                                           --oidc-client-id $CHECKIN_CLIENT_ID \
+                                                           --oidc-client-secret $CHECKIN_CLIENT_SECRET
+                                                           --site $EGI_SITE --vo $VO -j | jq ".[0].Result.id")"
+        echo "::add-mask::$DEPLOY_OS_TOKEN"
+        sed -i -e "s/deploy_secret/$DEPLOY_OS_TOKEN/" clouds.yaml
         mkdir -p ~/.config/openstack
         touch ~/.config/openstack/secure.yaml
     - name: Setup Terraform
