--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,10 +40,10 @@ jobs:
         BACKEND_OS_TOKEN="$(fedcloud openstack token issue --oidc-refresh-token $CHECKIN_REFRESH_TOKEN \
                                                            --oidc-client-id $CHECKIN_CLIENT_ID \
                                                            --oidc-client-secret $CHECKIN_CLIENT_SECRET \
-                                                           --site $BACKEND_SITE --vo $VO -j | jq )"
+                                                           --site $BACKEND_SITE --vo $VO -j | jq -r '.[0].Result.id')"
         echo $BACKEND_OS_TOKEN
         #        echo "::add-mask::$BACKEND_OS_TOKEN"
-        sed -i -e "s/backend_secret/$BACKEND_OS_TOKEN/" clouds.yaml
+        # sed -i -e "s/backend_secret/$BACKEND_OS_TOKEN/" clouds.yaml
         DEPLOY_OS_TOKEN="$(fedcloud openstack token issue --oidc-refresh-token $CHECKIN_REFRESH_TOKEN \
                                                            --oidc-client-id $CHECKIN_CLIENT_ID \
                                                            --oidc-client-secret $CHECKIN_CLIENT_SECRET \
