--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,16 +35,16 @@ jobs:
         BACKEND_SITE="$(yq -r .clouds.backend.site clouds.yaml)"
         EGI_SITE="$(yq -r .clouds.deploy.site clouds.yaml)"
         echo "EGI_SITE=$EGI_SITE" >> "$GITHUB_ENV"
-        BACKEND_OS_TOKEN="$(fedcloud openstack token issue --oidc-refresh-token $CHECKIN_REFRESH_TOKEN \
-                                                           --oidc-client-id $CHECKIN_CLIENT_ID \
-                                                           --oidc-client-secret $CHECKIN_CLIENT_SECRET \
-                                                           --site $BACKEND_SITE --vo $VO -j | jq -r '.[0].Result.id')"
+        BACKEND_OS_TOKEN="$(fedcloud openstack token issue --oidc-refresh-token "$CHECKIN_REFRESH_TOKEN" \
+                                                           --oidc-client-id "$CHECKIN_CLIENT_ID" \
+                                                           --oidc-client-secret "$CHECKIN_CLIENT_SECRET" \
+                                                           --site "$BACKEND_SITE" --vo "$VO" -j | jq -r '.[0].Result.id')"
         echo "::add-mask::$BACKEND_OS_TOKEN"
         sed -i -e "s/backend_secret/$BACKEND_OS_TOKEN/" clouds.yaml
-        DEPLOY_OS_TOKEN="$(fedcloud openstack token issue --oidc-refresh-token $CHECKIN_REFRESH_TOKEN \
-                                                           --oidc-client-id $CHECKIN_CLIENT_ID \
-                                                           --oidc-client-secret $CHECKIN_CLIENT_SECRET \
-                                                           --site $EGI_SITE --vo $VO -j | jq -r '.[0].Result.id')"
+        DEPLOY_OS_TOKEN="$(fedcloud openstack token issue --oidc-refresh-token "$CHECKIN_REFRESH_TOKEN" \
+                                                           --oidc-client-id "$CHECKIN_CLIENT_ID" \
+                                                           --oidc-client-secret "$CHECKIN_CLIENT_SECRET" \
+                                                           --site "$EGI_SITE" --vo "$VO" -j | jq -r '.[0].Result.id')"
         echo "::add-mask::$DEPLOY_OS_TOKEN"
         sed -i -e "s/deploy_secret/$DEPLOY_OS_TOKEN/" clouds.yaml
         mkdir -p ~/.config/openstack
