--- a/deploy/clouds.yaml
+++ b/deploy/clouds.yaml
@@ -1,10 +1,11 @@
 ---
-backend_token: &bt "secret"
-deploy_token: &dt "secret"
+backend_token: &bt "backend_secret"
+deploy_token: &dt "deploy_secret"
 
 clouds:
   backend:
     site: NCG-INGRID-PT
+    vo: cloud.egi.eu
     auth_type: token
     auth:
       auth_url:  https://stratus.ncg.ingrid.pt:5000/v3
@@ -12,6 +13,7 @@ clouds:
       project_id: 6b042927bcfa466cb9eb56d3ea679987
   deploy:
     site: NCG-INGRID-PT
+    vo: cloud.egi.eu
     auth_type: token
     auth:
       auth_url:  https://stratus.ncg.ingrid.pt:5000/v3
