--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,8 @@ on:
     branches:
       - main
   pull_request:
-    paths:
-      - "deploy/**"
+  #  paths:
+  #    - "deploy/**"
 
 jobs:
   terraform:
