--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,33 +18,33 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup python
       uses: actions/setup-python@v2
-    - name: Install python packages
+    - name: Install environment
       run: |
         curl -L https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 > jq
         chmod +x jq
-        pip install yq fedcloudclient
+        pip install yq git+https://github.com/tdviet/fedcloudclient.git
+        curl -L https://github.com/oidc-mytoken/client/releases/download/v0.3.0/mytoken_0.3.0_Linux_x86_64.tar.gz \
+          | tar -xzf -
+        mkdir ~/.mytoken
+        curl https://raw.githubusercontent.com/oidc-mytoken/client/master/config/example-config.yaml > ~/.mytoken/config.yaml
     - name: Configure providers access
       env:
-        CHECKIN_CLIENT_ID: ${{ secrets.CHECKIN_CLIENT_ID }}
-        CHECKIN_CLIENT_SECRET: ${{ secrets.CHECKIN_CLIENT_SECRET }}
-        CHECKIN_REFRESH_TOKEN: ${{ secrets.CHECKIN_REFRESH_TOKEN }}
+        MYTOKEN: ${{ secrets.MYTOKEN }}
       run: |
         PATH="$PWD:$PATH"
+        OIDC_TOKEN=$(mytoken AT --MT-env MYTOKEN)
+        echo "::add-mask::$OIDC_TOKEN"
         cd deploy
         BACKEND_SITE="$(yq -r .clouds.backend.site clouds.yaml)"
         BACKEND_VO="$(yq -r .clouds.backend.vo clouds.yaml)"
         EGI_SITE="$(yq -r .clouds.deploy.site clouds.yaml)"
         DEPLOY_VO="$(yq -r .clouds.deploy.vo clouds.yaml)"
         echo "EGI_SITE=$EGI_SITE" >> "$GITHUB_ENV"
-        BACKEND_OS_TOKEN="$(fedcloud openstack token issue --oidc-refresh-token "$CHECKIN_REFRESH_TOKEN" \
-                                                           --oidc-client-id "$CHECKIN_CLIENT_ID" \
-                                                           --oidc-client-secret "$CHECKIN_CLIENT_SECRET" \
+        BACKEND_OS_TOKEN="$(fedcloud openstack token issue --oidc-access-token "$OIDC_TOKEN" \
                                                            --site "$BACKEND_SITE" --vo "$BACKEND_VO" -j | jq -r '.[0].Result.id')"
         echo "::add-mask::$BACKEND_OS_TOKEN"
         sed -i -e "s/backend_secret/$BACKEND_OS_TOKEN/" clouds.yaml
-        DEPLOY_OS_TOKEN="$(fedcloud openstack token issue --oidc-refresh-token "$CHECKIN_REFRESH_TOKEN" \
-                                                           --oidc-client-id "$CHECKIN_CLIENT_ID" \
-                                                           --oidc-client-secret "$CHECKIN_CLIENT_SECRET" \
+        DEPLOY_OS_TOKEN="$(fedcloud openstack token issue --oidc-access-token "$OIDC_TOKEN" \
                                                            --site "$EGI_SITE" --vo "$DEPLOY_VO" -j | jq -r '.[0].Result.id')"
         echo "::add-mask::$DEPLOY_OS_TOKEN"
         sed -i -e "s/deploy_secret/$DEPLOY_OS_TOKEN/" clouds.yaml
