--- a/sites/ILIFU-UCT.yaml
+++ b/sites/ILIFU-UCT.yaml
@@ -7,3 +7,6 @@ vos:
 - name: vo.access.egi.eu
   auth:
     project_id: a8c0add4584e4230832f84adb0539809
+- name: vo.mightee.idia.za
+  auth:
+    project_id: d35b3b03f8ee41e3bc1bfbf212fee346
