--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -58,6 +58,7 @@ vos:
   vo.lifewatch.eu: "urn:mace:egi.eu:group:vo.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
   /vo.lifewatch.eu/openbiomap: "urn:mace:egi.eu:group:vo.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
   vo.max-centre.eu: "urn:mace:egi.eu:group:vo.max-centre.eu:vm_operator:role=member#aai.egi.eu"
+  vo.mightee.idia.za: "urn:mace:egi.eu:group:vo.mightee.idia.za:role=vm_operator#aai.egi.eu"
   vo.nbis.se: "urn:mace:egi.eu:group:vo.nbis.se:vm_operator:role=member#aai.egi.eu"
   vo.nextgeoss.eu: "urn:mace:egi.eu:group:vo.nextgeoss.eu:vm_operator:role=member#aai.egi.eu"
   vo.notebooks.egi.eu: "rn:mace:egi.eu:group:vo.notebooks.egi.eu:role=admin#aai.egi.eu"
