--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -28,6 +28,7 @@ vos:
   fusion: "urn:mace:egi.eu:group:fusion:vm_operator:role=member#aai.egi.eu"
   gosafe.eng.it: "urn:mace:egi.eu:group:gosafe.eng.it:vm_operator:role=member#aai.egi.eu"
   hisea.c-scale.eu: "urn:mace:egi.eu:group:hisea.c-scale.eu:role=member#aai.egi.eu "
+  icecube: "urn:mace:egi.eu:group:icecube:role=vm_operator#aai.egi.eu"
   kampal.eosc-hub.eu: "urn:mace:egi.eu:group:kampal.eosc-hub.eu:vm_operator:role=member#aai.egi.eu"
   lagoproject.net: "urn:mace:egi.eu:group:lagoproject.net:vm_operator:role=member#aai.egi.eu"
   med.semmelweis-univ.hu: "urn:mace:egi.eu:group:med.semmelweis-univ.hu:vm_operator:role=member#aai.egi.eu"
