--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -99,6 +99,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   vo.agiliacenter.com:
     auth: "{{ fedcloud_sa }}"
+  vo.bd4nrg.eu:
+    auth: "{{ fedcloud_sa }}"
   vo.clarin.eu:
   vo.crmdr.org:
   vo.dariah.eu:
