Add vo.matrycs.eu and vo.bd4nrg.eu.

--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -45,6 +45,7 @@ vos:
   umsa.cerit-sc.cz: "urn:mace:egi.eu:group:umsa.cerit-sc.cz:vm_operator:role=member#aai.egi.eu"
   vo.access.egi.eu: "urn:mace:egi.eu:group:vo.access.egi.eu:vm_operator:role=member#aai.egi.eu"
   vo.agiliacenter.com: "urn:mace:egi.eu:group:vo.agiliacenter.com:vm_operator:role=member#aai.egi.eu"
+  vo.bd4nrg.eu: "urn:mace:egi.eu:group:vo.bd4nrg.eu:role=vm_operator#aai.egi.eu"
   vo.clarin.eu: "urn:mace:egi.eu:group:vo.clarin.eu:vm_operator:role=member#aai.egi.eu"
   vo.deltares.nl: "urn:mace:egi.eu:group:vo.deltares.nl:vm_operator:role=member#aai.egi.eu"
   vo.elixir-europe.org: "urn:mace:egi.eu:group:vo.elixir-europe.org:vm_operator:role=member#aai.egi.eu"
@@ -58,6 +59,7 @@ vos:
   vo.indigo-datacloud.eu: "urn:mace:egi.eu:group:vo.indigo-datacloud.eu:vm_operator:role=member#aai.egi.eu"
   vo.lifewatch.eu: "urn:mace:egi.eu:group:vo.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
   /vo.lifewatch.eu/openbiomap: "urn:mace:egi.eu:group:vo.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
+  vo.matrycs.eu: "urn:mace:egi.eu:group:vo.matrycs.eu:role=vm_operator#aai.egi.eu"
   vo.max-centre.eu: "urn:mace:egi.eu:group:vo.max-centre.eu:vm_operator:role=member#aai.egi.eu"
   vo.mightee.idia.za: "urn:mace:egi.eu:group:vo.mightee.idia.za:role=vm_operator#aai.egi.eu"
   vo.nbis.se: "urn:mace:egi.eu:group:vo.nbis.se:vm_operator:role=member#aai.egi.eu"
