Added bioisi VO (#157)
* Added vo.deltares.nl and vo.plocan.eu for site CESGA

* Added support for vo.obsea.es VO

* Added bioisi VO

* Update sites/CESGA.yaml

Co-authored-by: Enol Fernández <enol.fernandez@egi.eu>

Co-authored-by: Baptiste Grenier <baptiste@bapt.name>
Co-authored-by: Enol Fernández <enol.fernandez@egi.eu>

--- a/sites/CESGA.yaml
+++ b/sites/CESGA.yaml
@@ -65,4 +65,7 @@ vos:
 - name: vo.obsea.es
   auth:
     project_id: 218b07e978ea4ba280dd4b554c0d1cd9
+- name: bioisi
+  auth:
+    project_id: f6c8441325e040e39a79a41cf39d3066
 
