--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -94,6 +94,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   umsa.cerit-sc.cz:
     auth: "{{ fedcloud_sa }}"
+  university.eosc-synergy.eu:
+    auth: "{{ fedcloud_sa }}"
   verce.eu:
   vo.access.egi.eu:
     auth: "{{ fedcloud_sa }}"
