--- a/sites/CESNET-MCC.yaml
+++ b/sites/CESNET-MCC.yaml
@@ -93,3 +93,6 @@ vos:
 - name: waterwatch.c-scale.eu
   auth:
     project_id: acf5d12568914e65a80150efb087cbb8
+- name: vo.carouseldancing.org
+  auth:
+    project_id: 7ace5ca998b849619bd34e922fbd2cb7
