--- a/sites/CESNET-MCC.yaml
+++ b/sites/CESNET-MCC.yaml
@@ -99,3 +99,6 @@ vos:
 - name: vo.pangeo.eu
   auth:
     project_id: 05e0ff6e03774082aadacc75bfc1d783
+- name: vo.neanias.eu
+  auth:
+    project_id: bc7b84252d3c4a42a6d1d346865a7631
