--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -65,11 +65,13 @@ vos:
   vo.max-centre.eu: "urn:mace:egi.eu:group:vo.max-centre.eu:vm_operator:role=member#aai.egi.eu"
   vo.mightee.idia.za: "urn:mace:egi.eu:group:vo.mightee.idia.za:role=vm_operator#aai.egi.eu"
   vo.nbis.se: "urn:mace:egi.eu:group:vo.nbis.se:vm_operator:role=member#aai.egi.eu"
+  vo.neanias.se: "urn:mace:egi.eu:group:vo.neanias.se:vm_operator:role=member#aai.egi.eu"
   vo.nextgeoss.eu: "urn:mace:egi.eu:group:vo.nextgeoss.eu:vm_operator:role=member#aai.egi.eu"
   vo.notebooks.egi.eu: "rn:mace:egi.eu:group:vo.notebooks.egi.eu:role=admin#aai.egi.eu"
   vo.obsea.es: "urn:mace:egi.eu:group:vo.obsea.es:vm_operator:role=member#aai.egi.eu"
   vo.openbiomap.lifewatch.eu: "urn:mace:egi.eu:group:vo.openbiomap.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
   vo.operas-eu.org: "urn:mace:egi.eu:group:vo.operas-eu.org:vm_operator:role=member#aai.egi.eu"
+  vo.pangeo.eu: "urn:mace:egi.eu:group:vo.pangeo.eu:role=vm_operator#aai.egi.eu"
   vo.panosc.eu: "urn:mace:egi.eu:group:vo.panosc.eu:role=vm_operator#aai.egi.eu"
   vo.plocan.eu: "urn:mace:egi.eu:group:vo.plocan.eu:vm_operator:role=member#aai.egi.eu"
   vo.policycloud.eu: "urn:mace:egi.eu:group:vo.policycloud.eu:vm_operator:role=member#aai.egi.eu"
