--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -43,9 +43,11 @@ vos:
   saps-vo.i3m.upv.es: "urn:mace:egi.eu:group:saps-vo.i3m.upv.es:vm_operator:role=member#aai.egi.eu"
   training.egi.eu: "urn:mace:egi.eu:group:training.egi.eu:vm_operator:role=member#aai.egi.eu"
   umsa.cerit-sc.cz: "urn:mace:egi.eu:group:umsa.cerit-sc.cz:vm_operator:role=member#aai.egi.eu"
+  university.eosc-synergy.eu: "urn:mace:egi.eu:group:university.eosc-synergy.eu:vm_operator:role=member#aai.egi.eu"
   vo.access.egi.eu: "urn:mace:egi.eu:group:vo.access.egi.eu:vm_operator:role=member#aai.egi.eu"
   vo.agiliacenter.com: "urn:mace:egi.eu:group:vo.agiliacenter.com:vm_operator:role=member#aai.egi.eu"
   vo.bd4nrg.eu: "urn:mace:egi.eu:group:vo.bd4nrg.eu:role=vm_operator#aai.egi.eu"
+  vo.carouseldancing.org: "urn:mace:egi.eu:group:vo.carouseldancing.org:role=vm_operator#aai.egi.eu"
   vo.clarin.eu: "urn:mace:egi.eu:group:vo.clarin.eu:vm_operator:role=member#aai.egi.eu"
   vo.deltares.nl: "urn:mace:egi.eu:group:vo.deltares.nl:vm_operator:role=member#aai.egi.eu"
   vo.elixir-europe.org: "urn:mace:egi.eu:group:vo.elixir-europe.org:vm_operator:role=member#aai.egi.eu"
@@ -63,14 +65,17 @@ vos:
   vo.max-centre.eu: "urn:mace:egi.eu:group:vo.max-centre.eu:vm_operator:role=member#aai.egi.eu"
   vo.mightee.idia.za: "urn:mace:egi.eu:group:vo.mightee.idia.za:role=vm_operator#aai.egi.eu"
   vo.nbis.se: "urn:mace:egi.eu:group:vo.nbis.se:vm_operator:role=member#aai.egi.eu"
+  vo.neanias.eu: "urn:mace:egi.eu:group:vo.neanias.eu:vm_operator:role=member#aai.egi.eu"
   vo.nextgeoss.eu: "urn:mace:egi.eu:group:vo.nextgeoss.eu:vm_operator:role=member#aai.egi.eu"
   vo.notebooks.egi.eu: "rn:mace:egi.eu:group:vo.notebooks.egi.eu:role=admin#aai.egi.eu"
   vo.obsea.es: "urn:mace:egi.eu:group:vo.obsea.es:vm_operator:role=member#aai.egi.eu"
   vo.openbiomap.lifewatch.eu: "urn:mace:egi.eu:group:vo.openbiomap.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
   vo.operas-eu.org: "urn:mace:egi.eu:group:vo.operas-eu.org:vm_operator:role=member#aai.egi.eu"
+  vo.pangeo.eu: "urn:mace:egi.eu:group:vo.pangeo.eu:role=vm_operator#aai.egi.eu"
   vo.panosc.eu: "urn:mace:egi.eu:group:vo.panosc.eu:role=vm_operator#aai.egi.eu"
   vo.plocan.eu: "urn:mace:egi.eu:group:vo.plocan.eu:vm_operator:role=member#aai.egi.eu"
   vo.policycloud.eu: "urn:mace:egi.eu:group:vo.policycloud.eu:vm_operator:role=member#aai.egi.eu"
   vo.seadatanet.eu: "urn:mace:egi.eu:group:vo.seadatanet.eu:vm_operator:role=member#aai.egi.eu"
   vo.stars4all.eu: "urn:mace:egi.eu:group:vo.stars4all.eu:vm_operator:role=member#aai.egi.eu"
+  waterwatch.c-scale.eu: "urn:mace:egi.eu:group:waterwatch.c-scale.eu:members:role=member#aai.egi.eu"
   worsica.vo.incd.pt: "urn:mace:egi.eu:group:worsica.vo.incd.pt:vm_operator:role=member#aai.egi.eu"
